// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picture renders 1`] = `
<figure
  className="container"
  style={Object {}}
>
  <img
    alt="A sample test image"
    className="wrapper"
    onLoad={[Function]}
    src="//placehold.it/200x200"
    srcSet={null}
  />
  <Component
    className="placeholder"
  />
</figure>
`;

exports[`Picture renders a lazy-load variant 1`] = `
<figure
  className="container"
  style={Object {}}
>
  <img
    alt="Test"
    className="wrapper"
    data-src="//placehold.it/200x200"
    data-srcset="//placehold.it/400x400 400w, //placehold.it/600x600 600w"
    loading="auto"
    onLoad={[Function]}
    srcSet={null}
  />
  <Component
    className="placeholder"
  />
</figure>
`;
